[-] CSS: FIx overflowing slides in homeslider container

--- a/themes/community-theme-16/sass/modules/homeslider/homeslider.scss
+++ b/themes/community-theme-16/sass/modules/homeslider/homeslider.scss
@@ -5,6 +5,8 @@
 #homepage-slider {
   position: relative;
   margin-bottom: 30px;
+  // Hides slides outside the container before JS slider initializes
+  overflow: hidden;
   .bx-wrapper {
     // .bx-pager { bottom: auto; }
     .bx-next,
